some changes initially

--- a/config/AppConfig.json
+++ b/config/AppConfig.json
@@ -14,7 +14,7 @@
     "AndroidAppUrl": "https://play.google.com/store/apps/details?id=com.graycode.aainchopainchosaccos&hl=en"
   },
   "ThemeConfig": {
-    "primaryColor": "#009D4B",
+    "primaryColor": "#AE529B",
     "secondoryColor": "#F7FAFC",
     "defaultColor": "#009D4B",
     "backGround": "#F5F5F5",
