--- a/config/AppConfig.json
+++ b/config/AppConfig.json
@@ -5,10 +5,10 @@
     "grant_type": "client_credentials"
   },
   "CompanyConfig": {
-    "CompanyId": 2,
+    "CompanyId": 1,
     "BranchId": 1,
     "CompanyCode": "aainchopaincho",
-    "CompanyName": "Aaincho Paincho Saving and Credit",
+    "CompanyName": "GrayCode Technology",
     "WalletName": "Aaincho Paincho",
     "BaseUrl": "https://mobileapi.thefinmax.com/",
     "AndroidAppUrl": "https://play.google.com/store/apps/details?id=com.graycode.aainchopainchosaccos&hl=en"
