--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "9.3.10",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
@@ -62,6 +63,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-form-validator": "^0.1.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-image-picker": "^7.1.0",
     "react-native-image-slider": "^2.0.3",
     "react-native-image-slider-box": "^1.1.8",
     "react-native-loading-spinner-overlay": "^2.0.0",
