changes in register

--- a/config/AppConfig.json
+++ b/config/AppConfig.json
@@ -21,6 +21,6 @@
     "primaryTextColor": "#BF232323"
   },
   "GeneralConfig": {
-    "IsAppForMultiple": false
+    "IsAppForMultiple": true
   }
 }
