--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.2.1",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
@@ -80,6 +81,7 @@
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-table-component": "^1.2.1",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
