Added Attendance.js Added OrderList.js, AddOrder.js, OrderDetails.js : Incomplete

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-autocomplete-dropdown": "^2.1.1",
     "react-native-axios": "^0.17.1",
+    "react-native-calendars": "^1.1303.0",
     "react-native-check-box": "^2.1.7",
     "react-native-confirmation-code-field": "^7.3.0",
     "react-native-device-info": "^6.0.2",
