--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/checkbox": "^0.5.12",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/geolocation": "^3.1.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "9.3.10",
     "@react-native-picker/picker": "^2.6.1",
