--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-local-authentication": "~13.4.1",
+    "expo-location": "^16.3.0",
     "expo-modules-autolinking": "~1.5.0",
     "expo-notifications": "~0.20.1",
     "expo-permissions": "~14.2.1",
