--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@use-expo/font": "^2.0.0",
     "accordion-collapse-react-native": "^1.1.0",
     "axios": "^0.27.2",
+    "date-fns": "^3.3.1",
     "expo": "^49.0.0",
     "expo-asset": "~8.10.1",
     "expo-barcode-scanner": "~12.5.3",
