--- a/config/AppConfig.json
+++ b/config/AppConfig.json
@@ -8,7 +8,7 @@
     "CompanyId": 1,
     "BranchId": 1,
     "CompanyCode": "aainchopaincho",
-    "CompanyName": "GrayCode Technology",
+    "CompanyName": "Finmax Sales App",
     "WalletName": "Aaincho Paincho",
     "BaseUrl": "https://api.graycode.com.np/",
     "AndroidAppUrl": ""
