--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-native-community/geolocation": "^3.1.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "9.3.10",
-    "@react-native-picker/picker": "^2.6.1",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-top-tabs": "^6.6.5",
@@ -39,7 +39,7 @@
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-local-authentication": "~13.4.1",
-    "expo-location": "^16.3.0",
+    "expo-location": "~16.1.0",
     "expo-modules-autolinking": "~1.5.0",
     "expo-notifications": "~0.20.1",
     "expo-permissions": "~14.2.1",
