--- a/app.json
+++ b/app.json
@@ -28,7 +28,7 @@
     },
     "android": {
       "package": "com.graycode.finmaxsales",
-      "permissions": ["CAMERA", "WRITE_EXTERNAL_STORAGE"],
+      "permissions": ["CAMERA", "WRITE_EXTERNAL_STORAGE", "LOCATION","ACCESS_COARSE_LOCATION","ACCESS_FINE_LOCATION"],
       "versionCode": 1,
       "googleServicesFile": "./google-services.json"
     },
