--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-numeric-input": "^1.9.1",
     "react-native-otp-textinput": "^0.0.9",
+    "react-native-pager-view": "^6.2.3",
     "react-native-reanimated": "~3.3.0",
     "react-native-root-toast": "^3.4.0",
     "react-native-safe-area-context": "4.6.3",
