--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-native-image-slider": "^2.0.3",
     "react-native-image-slider-box": "^1.1.8",
     "react-native-loading-spinner-overlay": "^2.0.0",
+    "react-native-maps": "^1.10.3",
     "react-native-numeric-input": "^1.9.1",
     "react-native-otp-textinput": "^0.0.9",
     "react-native-pager-view": "^6.2.3",
@@ -84,6 +85,7 @@
     "react-native-simple-toast": "^1.1.3",
     "react-native-store-version": "^1.3.2",
     "react-native-svg": "13.9.0",
+    "react-native-svg-circular-progress": "^1.0.4",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.2",
