--- a/app.json
+++ b/app.json
@@ -29,7 +29,7 @@
     "android": {
       "package": "com.graycode.finmaxsales",
       "permissions": ["CAMERA", "WRITE_EXTERNAL_STORAGE", "LOCATION","ACCESS_COARSE_LOCATION","ACCESS_FINE_LOCATION"],
-      "versionCode": 1,
+      "versionCode": 2,
       "googleServicesFile": "./google-services.json"
     },
     "plugins": [
@@ -43,6 +43,12 @@
         "expo-contacts",
         {
           "contactsPermission": "Allow $(PRODUCT_NAME) to access your contacts."
+        }
+      ], 
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
         }
       ]
     ],
