location permission in eac location retrieving components/AutoCompleteList.js

--- a/app.json
+++ b/app.json
@@ -28,8 +28,14 @@
     },
     "android": {
       "package": "com.graycode.finmaxsales",
-      "permissions": ["CAMERA", "WRITE_EXTERNAL_STORAGE", "LOCATION","ACCESS_COARSE_LOCATION","ACCESS_FINE_LOCATION"],
-      "versionCode": 4,
+      "permissions": [
+        "CAMERA",
+        "WRITE_EXTERNAL_STORAGE",
+        "LOCATION",
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION"
+      ],
+      "versionCode": 5,
       "googleServicesFile": "./google-services.json"
     },
     "plugins": [
@@ -44,7 +50,7 @@
         {
           "contactsPermission": "Allow $(PRODUCT_NAME) to access your contacts."
         }
-      ], 
+      ],
       [
         "expo-location",
         {
@@ -71,7 +77,6 @@
     },
     "extra": {
       "eas": {
-
         "projectId": "9fb69b05-27f7-4c82-8712-a60c116c925e"
       }
     },
