--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-native-community/geolocation": "^3.1.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "9.3.10",
-    "@react-native-picker/picker": "^2.4.10",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-top-tabs": "^6.6.5",
@@ -72,10 +72,10 @@
     "react-native-image-slider": "^2.0.3",
     "react-native-image-slider-box": "^1.1.8",
     "react-native-loading-spinner-overlay": "^2.0.0",
-    "react-native-maps": "^1.10.3",
+    "react-native-maps": "1.7.1",
     "react-native-numeric-input": "^1.9.1",
     "react-native-otp-textinput": "^0.0.9",
-    "react-native-pager-view": "^6.2.3",
+    "react-native-pager-view": "6.2.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-root-toast": "^3.4.0",
     "react-native-safe-area-context": "4.6.3",
