--- a/package.json
+++ b/package.json
@@ -1,103 +1,72 @@
 {
+  "name": "salesapp",
+  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@expo-google-fonts/poppins": "^0.1.0",
-    "@expo/config-plugins": "~7.2.2",
-    "@expo/prebuild-config": "~6.2.4",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/checkbox": "^0.5.12",
-    "@react-native-community/clipboard": "^1.5.1",
-    "@react-native-community/datetimepicker": "7.2.0",
-    "@react-native-community/geolocation": "^3.1.0",
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-community/netinfo": "9.3.10",
-    "@react-native-picker/picker": "2.4.10",
-    "@react-navigation/bottom-tabs": "^6.3.1",
-    "@react-navigation/drawer": "^6.6.2",
-    "@react-navigation/material-top-tabs": "^6.6.5",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "11.1.0",
+    "@react-native-picker/picker": "^2.6.1",
+    "@react-native/babel-preset": "^0.73.21",
+    "@react-native/metro-config": "^0.72.12",
+    "@react-navigation/bottom-tabs": "^6.5.12",
+    "@react-navigation/material-top-tabs": "^6.6.6",
     "@react-navigation/native": "^6.1.6",
-    "@react-navigation/stack": "^6.2.1",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
-    "@use-expo/font": "^2.0.0",
-    "accordion-collapse-react-native": "^1.1.0",
-    "axios": "^0.27.2",
-    "date-fns": "^3.3.1",
-    "expo": "^49.0.0",
-    "expo-asset": "~8.10.1",
-    "expo-barcode-scanner": "~12.5.3",
-    "expo-constants": "~14.4.2",
-    "expo-contacts": "~12.2.0",
-    "expo-device": "~5.4.0",
-    "expo-file-system": "~15.4.5",
-    "expo-font": "~11.4.0",
-    "expo-image-picker": "~14.3.2",
-    "expo-local-authentication": "~13.4.1",
-    "expo-location": "~16.1.0",
-    "expo-modules-autolinking": "~1.5.0",
-    "expo-notifications": "~0.20.1",
-    "expo-permissions": "~14.2.1",
-    "expo-print": "~12.4.2",
-    "expo-random": "~13.2.0",
-    "expo-secure-store": "~12.3.1",
-    "expo-sharing": "~11.5.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "galio-framework": "^0.6.3",
-    "global": "^4.4.0",
-    "jwt-decode": "^3.0.0",
-    "moment": "^2.27.0",
-    "prop-types": "^15.7.2",
-    "qs": "^6.9.4",
+    "accordion-collapse-react-native": "^1.1.1",
+    "axios": "^1.6.7",
+    "expo": "~50.0.8",
+    "expo-constants": "^15.4.5",
+    "expo-device": "^5.9.3",
+    "expo-file-system": "^16.0.6",
+    "expo-font": "^11.10.3",
+    "expo-image-picker": "^14.7.1",
+    "expo-local-authentication": "^13.8.0",
+    "expo-location": "~16.5.4",
+    "expo-notifications": "^0.27.6",
+    "expo-secure-store": "^12.8.1",
+    "expo-splash-screen": "^0.26.4",
+    "expo-status-bar": "~1.11.1",
+    "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
+    "qs": "^6.11.2",
     "react": "18.2.0",
-    "react-native": "^0.72.6",
+    "react-native": "^0.73.4",
     "react-native-app-intro-slider": "^4.0.4",
-    "react-native-autocomplete-dropdown": "^2.1.1",
-    "react-native-axios": "^0.17.1",
+    "react-native-autocomplete-dropdown": "^3.1.3",
+    "react-native-calendar": "^0.13.1",
     "react-native-calendars": "^1.1303.0",
-    "react-native-check-box": "^2.1.7",
-    "react-native-confirmation-code-field": "^7.3.0",
-    "react-native-device-info": "^6.0.2",
-    "react-native-dropdown-picker": "^4.0.9",
-    "react-native-elements": "^3.4.2",
-    "react-native-form-validator": "^0.1.3",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-confirmation-code-field": "^7.3.2",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-image-picker": "^7.1.0",
-    "react-native-image-slider": "^2.0.3",
-    "react-native-image-slider-box": "^1.1.8",
-    "react-native-loading-spinner-overlay": "^2.0.0",
-    "react-native-maps": "1.7.1",
-    "react-native-numeric-input": "^1.9.1",
-    "react-native-otp-textinput": "^0.0.9",
-    "react-native-pager-view": "6.2.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-root-toast": "^3.4.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-select-contact": "^1.6.3",
-    "react-native-select-dropdown": "^2.0.3",
-    "react-native-simple-toast": "^1.1.3",
-    "react-native-store-version": "^1.3.2",
-    "react-native-svg": "13.9.0",
-    "react-native-svg-circular-progress": "^1.0.4",
-    "react-native-svg-transformer": "^1.0.0",
-    "react-native-swiper": "^1.6.0",
-    "react-native-tab-view": "^3.5.2",
-    "react-native-table-component": "^1.2.1",
+    "react-native-image-slider-box": "^2.0.7",
+    "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-maps": "1.10.0",
+    "react-native-root-toast": "^3.5.1",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-select-dropdown": "^3.4.0",
+    "react-native-store-version": "^1.4.1",
+    "react-native-svg-transformer": "^1.3.0",
     "react-native-uuid": "^2.0.1",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-webview": "13.2.2",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-webview": "13.6.4",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "babel-preset-expo": "^9.3.0"
+    "babel-preset-expo": "^10.0.0"
   },
   "resolutions": {
     "standard-version-expo/**/@expo/config-plugins": "4.1.0"
