react native gesture handler error removed

--- a/app.json
+++ b/app.json
@@ -17,10 +17,7 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "platforms": [
-      "ios",
-      "android"
-    ],
+    "platforms": ["ios", "android"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.graycode.finmaxsales",
@@ -38,7 +35,7 @@
         "ACCESS_COARSE_LOCATION",
         "ACCESS_FINE_LOCATION"
       ],
-      "versionCode":12,
+      "versionCode": 13,
       "googleServicesFile": "./google-services.json"
     },
     "plugins": [
@@ -49,9 +46,7 @@
         }
       ]
     ],
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "extra": {
       "eas": {
         "projectId": "9fb69b05-27f7-4c82-8712-a60c116c925e"
@@ -59,5 +54,3 @@
     }
   }
 }
-
-
