--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "accordion-collapse-react-native": "^1.1.1",
     "axios": "^1.6.7",
     "expo": "~50.0.8",
+    "expo-camera": "^14.0.5",
     "expo-constants": "^15.4.5",
     "expo-device": "^5.9.3",
-    "expo-file-system": "^16.0.6",
+    "expo-document-picker": "~11.10.1",
+    "expo-file-system": "^16.0.7",
     "expo-font": "^11.10.3",
     "expo-image-picker": "^14.7.1",
     "expo-local-authentication": "^13.8.0",
@@ -46,7 +48,7 @@
     "react-native-calendar": "^0.13.1",
     "react-native-calendars": "^1.1303.0",
     "react-native-confirmation-code-field": "^7.3.2",
-    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-dropdown-picker": "^4.0.9",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-image-picker": "^7.1.0",
