--- a/app.json
+++ b/app.json
@@ -35,7 +35,7 @@
         "ACCESS_COARSE_LOCATION",
         "ACCESS_FINE_LOCATION"
       ],
-      "versionCode": 17,
+      "versionCode": 18,
       "googleServicesFile": "./google-services.json"
     },
     "plugins": [
@@ -55,6 +55,12 @@
         "expo-document-picker",
         {
           "iCloudContainerEnvironment": "Production"
+        }
+      ], 
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
         }
       ]
     ],
