--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "accordion-collapse-react-native": "^1.1.1",
     "axios": "^1.6.7",
-    "expo": "~50.0.8",
-    "expo-camera": "^14.0.5",
+    "expo": "~50.0.13",
+    "expo-camera": "~14.1.1",
     "expo-constants": "^15.4.5",
     "expo-device": "^5.9.3",
     "expo-document-picker": "~11.10.1",
@@ -33,7 +33,7 @@
     "expo-font": "^11.10.3",
     "expo-image-picker": "^14.7.1",
     "expo-local-authentication": "^13.8.0",
-    "expo-location": "~16.5.4",
+    "expo-location": "~16.5.5",
     "expo-notifications": "^0.27.6",
     "expo-secure-store": "^12.8.1",
     "expo-splash-screen": "^0.26.4",
@@ -42,7 +42,7 @@
     "moment": "^2.30.1",
     "qs": "^6.11.2",
     "react": "18.2.0",
-    "react-native": "^0.73.4",
+    "react-native": "0.73.5",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-autocomplete-dropdown": "^3.1.3",
     "react-native-calendar": "^0.13.1",
@@ -60,7 +60,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-select-dropdown": "^3.4.0",
     "react-native-store-version": "^1.4.1",
-    "react-native-svg": "^15.0.0",
+    "react-native-svg": "14.1.0",
     "react-native-svg-transformer": "^1.3.0",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^10.0.3",
