--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "accordion-collapse-react-native": "^1.1.1",
     "axios": "^1.6.7",
-    "expo": "~50.0.13",
+    "expo": "~50.0.14",
     "expo-camera": "~14.1.1",
     "expo-constants": "^15.4.5",
     "expo-device": "^5.9.3",
@@ -42,7 +42,7 @@
     "moment": "^2.30.1",
     "qs": "^6.11.2",
     "react": "18.2.0",
-    "react-native": "0.73.5",
+    "react-native": "^0.73.6",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-autocomplete-dropdown": "^3.1.3",
     "react-native-calendar": "^0.13.1",
@@ -55,6 +55,7 @@
     "react-native-image-slider-box": "^2.0.7",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-maps": "1.10.0",
+    "react-native-pager-view": "^6.2.3",
     "react-native-root-toast": "^3.5.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
@@ -62,6 +63,7 @@
     "react-native-store-version": "^1.4.1",
     "react-native-svg": "14.1.0",
     "react-native-svg-transformer": "^1.3.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^10.0.3",
     "react-native-webview": "13.6.4",
