--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "accordion-collapse-react-native": "^1.1.1",
     "axios": "^1.6.7",
+    "eas-cli": "^7.6.2",
     "expo": "~50.0.14",
     "expo-camera": "~14.1.1",
     "expo-constants": "^15.4.5",
